# apps/core-api/Modules/Patients/app/Enums/PatientSourceType.php
@@ -1,0 +1,11 @@
+<?php
+
+declare(strict_types=1);
+
+namespace Modules\Patients\Enums;
+
+enum PatientSourceType: string
+{
+    case SelfOnboarding = 'self_onboarding';
+    case WalkIn = 'walk_in';
+}
